--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -47,8 +47,23 @@
     "# TODO: Create compute cluster\n",
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
+    "### YOUR CODE HERE ###\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "# Choose a name for your CPU cluster\n",
+    "compute_cluster_name = \"compute-cluster\"\n",
+    "\n",
+    "# Verify that the cluster does not exist already\n",
+    "try:\n",
+    "    compute_cluster = ComputeTarget(workspace=ws, name=compute_cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
+    "                                                           idle_seconds_before_scaledown=2400,\n",
+    "                                                           min_nodes=0,\n",
+    "                                                           max_nodes=4)\n",
+    "    compute_cluster = ComputeTarget.create(ws, compute_cluster_name, compute_config)\n",
+    "\n",
+    "compute_cluster.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -77,22 +92,39 @@
     "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
     "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
     "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
-    "import os\n",
+    "import os #> es wird in Bild 4 erwähnt\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "#ps = ### YOUR CODE HERE ### -> uniform. 'Tune hyperparmaters for your model with Azure ML'\n",
+    "ps = RandomParameterSampling( {\n",
+    "        \"learning_rate\": uniform(0.01, 4),\n",
+    "        \"batch_size\": uniform(10, 300)\n",
+    "    }\n",
+    ")\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "#policy = ### YOUR CODE HERE ###\n",
+    "policy = BanditPolicy(evaluation_interval=2, slack_factor = 0.1) # early_termination_policy\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
+    "### YOUR CODE HERE ### 'SKLearn Class' \n",
+    "est = SKLearn(source_directory='.', #kann vielleicht entfallen\n",
+    "              compute_target=compute_cluster,\n",
+    "              script_params={'--C': 1.0, '--max_iter': 100}, #alternatively: ['--C', 1.0, '--max_iter', 100]\n",
+    "              entry_script='train.py') #A string representing the relative path to the file used to start training.\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ### 'Tune hyperparameters for your model with Azure ML'\n",
+    "hyperdrive_config = HyperDriveConfig(estimator=est,\n",
+    "                                     hyperparameter_sampling=ps,\n",
+    "                                     policy=policy,\n",
+    "                                     primary_metric_name='accuracy', \n",
+    "                                     primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "                                     max_total_runs=20,\n",
+    "                                     max_concurrent_runs=4) #similar to the number of nodes"
    ]
   },
   {
@@ -103,7 +135,11 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "hyperdrive_run = exp.submit(hyperdrive_config)\n",
+    "hyperdrive_run.wait_for_completion(show_output=False)\n",
+    "RunDetails(hyperdrive_run).show()"
    ]
   },
   {
@@ -128,7 +164,13 @@
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
+    "\n",
+    "joblib.dump(best_run, 'SKlearn_hyperdrive.joblib')\n",
+    "\n",
+    "# \"Train image classification model with...\""
    ]
   },
   {
@@ -143,7 +185,9 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "dataset = TabularDatasetFactory.from_delimited_files(path='https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv', separator=',', header=True, validate=False)\n",
+    "#ds = dataset.to_pandas_dataframe() \n"
    ]
   },
   {
@@ -166,9 +210,15 @@
    "outputs": [],
    "source": [
     "from train import clean_data\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "#x, y = clean_data(### YOUR DATA OBJECT HERE ###)\n",
+    "x, y = clean_data(dataset)\n",
+    "#or maybe without the to_pandas_dataframe()\n",
+    "\n",
+    "#todo: Split data into train and test set\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.3)"
    ]
   },
   {
@@ -198,11 +248,11 @@
     "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task='classification', #logisticRegression is a classification task\n",
+    "    primary_metric='accuracy',\n",
+    "    training_data=x_train, \n",
+    "    label_column_name=y_train,\n",
+    "    n_cross_validations=5)"
    ]
   },
   {
@@ -223,7 +273,38 @@
    "source": [
     "# Submit your automl run\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "run = exp.submit(automl_config, show_output=True)\n",
+    "run.wait_for_completion(show_output=False)\n",
+    "RunDetails(run).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'run' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7acfe0358856>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m### YOUR CODE HERE ###\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mbest_automl_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrun\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_best_run_by_primary_metric\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest_automl_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'AutoML.joblib'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'run' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve and save your best automl model.\n",
+    "\n",
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "best_automl_model = run.get_best_run_by_primary_metric()\n",
+    "\n",
+    "joblib.dump(best_automl_model, 'AutoML.joblib')"
    ]
   },
   {
@@ -232,9 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve and save your best automl model.\n",
-    "\n",
-    "### YOUR CODE HERE ###"
+    "print(finished)"
    ]
   }
  ],
