--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
-    "ws = Workspace.get(name=\"udacity-project\")\n",
+    "ws = Workspace.get(name=\"udacity-project\") \n",
     "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
@@ -53,15 +53,11 @@
     "compute_cluster_name = \"compute-cluster\"\n",
     "\n",
     "# Verify that the cluster does not exist already\n",
-    "try:\n",
-    "    compute_cluster = ComputeTarget(workspace=ws, name=compute_cluster_name)\n",
-    "    print('Found existing cluster, use it.')\n",
-    "except ComputeTargetException:\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
-    "                                                           idle_seconds_before_scaledown=2400,\n",
+    "\n",
+    "compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
     "                                                           min_nodes=0,\n",
     "                                                           max_nodes=4)\n",
-    "    compute_cluster = ComputeTarget.create(ws, compute_cluster_name, compute_config)\n",
+    "compute_cluster = ComputeTarget.create(ws, compute_cluster_name, compute_config)\n",
     "\n",
     "compute_cluster.wait_for_completion(show_output=True)"
    ]
@@ -97,21 +93,27 @@
     "# Specify parameter sampler\n",
     "#ps = ### YOUR CODE HERE ### -> uniform. 'Tune hyperparmaters for your model with Azure ML'\n",
     "ps = RandomParameterSampling( {\n",
-    "        \"learning_rate\": uniform(0.01, 4),\n",
-    "        \"batch_size\": uniform(10, 300)\n",
+    "        \"learning_rate\": uniform(0.001, 100),\n",
+    "        \"batch_size\": uniform(50, 300)\n",
     "    }\n",
     ")\n",
     "\n",
     "# Specify a Policy\n",
     "#policy = ### YOUR CODE HERE ###\n",
-    "policy = BanditPolicy(evaluation_interval=2, slack_factor = 0.1) # early_termination_policy\n",
+    "policy = BanditPolicy(evaluation_interval=1, slack_factor = 0.1) # early_termination_policy\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
+    "script_folder= './training'\n",
+    "os.makedirs(script_folder, exist_ok=True)\n",
+    "\n",
     "# Create a SKLearn estimator for use with train.py\n",
     "### YOUR CODE HERE ### 'SKLearn Class' \n",
-    "est = SKLearn(source_directory='.', #kann vielleicht entfallen\n",
+    "import shutil\n",
+    "shutil.copy('./train.py', script_folder)\n",
+    "\n",
+    "est = SKLearn(source_directory=script_folder, #kann vielleicht entfallen\n",
     "              compute_target=compute_cluster,\n",
     "              script_params={'--C': 1.0, '--max_iter': 100}, #alternatively: ['--C', 1.0, '--max_iter', 100]\n",
     "              entry_script='train.py') #A string representing the relative path to the file used to start training.\n",
@@ -121,7 +123,7 @@
     "hyperdrive_config = HyperDriveConfig(estimator=est,\n",
     "                                     hyperparameter_sampling=ps,\n",
     "                                     policy=policy,\n",
-    "                                     primary_metric_name='accuracy', \n",
+    "                                     primary_metric_name='Accuracy', \n",
     "                                     primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
     "                                     max_total_runs=20,\n",
     "                                     max_concurrent_runs=4) #similar to the number of nodes"
@@ -138,8 +140,8 @@
     "### YOUR CODE HERE ###\n",
     "\n",
     "hyperdrive_run = exp.submit(hyperdrive_config)\n",
-    "hyperdrive_run.wait_for_completion(show_output=False)\n",
-    "RunDetails(hyperdrive_run).show()"
+    "RunDetails(hyperdrive_run).show()\n",
+    "hyperdrive_run.wait_for_completion(show_output=True)\n"
    ]
   },
   {
@@ -168,7 +170,11 @@
     "\n",
     "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
     "\n",
-    "joblib.dump(best_run, 'SKlearn_hyperdrive.joblib')\n",
+    "print(best_run.get_file_names())\n",
+    "hyperdrive_model = best_run.register_model(model_name = 'SKlearn_hyperdrive', model_path = 'outputs/model.joblib')\n",
+    "print(best_run)\n",
+    "\n",
+    "joblib.dump(best_run, 'outputs/SKlearn_hyperdrive_joblib.joblib')\n",
     "\n",
     "# \"Train image classification model with...\""
    ]
@@ -212,13 +218,17 @@
     "from train import clean_data\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import pandas as pd\n",
+    "from azureml.core.run import Run\n",
+    "\n",
     "# Use the clean_data function to clean your data.\n",
     "#x, y = clean_data(### YOUR DATA OBJECT HERE ###)\n",
     "x, y = clean_data(dataset)\n",
     "#or maybe without the to_pandas_dataframe()\n",
-    "\n",
+    "ds = x.join(y)\n",
     "#todo: Split data into train and test set\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.3)"
+    "x_train, x_test = train_test_split(ds, test_size=0.3)"
    ]
   },
   {
@@ -249,9 +259,9 @@
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
     "    task='classification', #logisticRegression is a classification task\n",
-    "    primary_metric='accuracy',\n",
+    "    primary_metric='AUC_weighted',\n",
     "    training_data=x_train, \n",
-    "    label_column_name=y_train,\n",
+    "    label_column_name=x_test, #\"y\"\n",
     "    n_cross_validations=5)"
    ]
   },
@@ -272,7 +282,7 @@
    "outputs": [],
    "source": [
     "# Submit your automl run\n",
-    "\n",
+    "from azureml.widgets import RunDetails\n",
     "### YOUR CODE HERE ###\n",
     "\n",
     "run = exp.submit(automl_config, show_output=True)\n",
@@ -303,8 +313,27 @@
     "### YOUR CODE HERE ###\n",
     "\n",
     "best_automl_model = run.get_best_run_by_primary_metric()\n",
-    "\n",
     "joblib.dump(best_automl_model, 'AutoML.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azureml.automl.runtime.onnx_convert import OnnxConverter\n",
+    "best_run_model, onnx_model= run.get_output(return_onnx_model=True)\n",
+    "OnnxConverter.save_onnx_model(onnx_model, file_path=\"./automl_model.onnx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_target.delete()"
    ]
   },
   {
