--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -55,7 +55,6 @@
     "# Verify that the cluster does not exist already\n",
     "\n",
     "compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
-    "                                                           min_nodes=0,\n",
     "                                                           max_nodes=4)\n",
     "compute_cluster = ComputeTarget.create(ws, compute_cluster_name, compute_config)\n",
     "\n",
@@ -93,8 +92,8 @@
     "# Specify parameter sampler\n",
     "#ps = ### YOUR CODE HERE ### -> uniform. 'Tune hyperparmaters for your model with Azure ML'\n",
     "ps = RandomParameterSampling( {\n",
-    "        \"learning_rate\": uniform(0.001, 100),\n",
-    "        \"batch_size\": uniform(50, 300)\n",
+    "        \"--C\": uniform(0.001, 100),\n",
+    "        \"--max_iter\": uniform(50, 300)\n",
     "    }\n",
     ")\n",
     "\n",
