--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -12,7 +12,8 @@
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
-    "ws = Workspace.get(name=\"udacity-project\") \n",
+    "#ws = Workspace.get(name=\"udacity-project\") \n",
+    "ws = Workspace.from_config()\n",
     "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
@@ -86,14 +87,14 @@
     "from azureml.train.hyperdrive.policy import BanditPolicy\n",
     "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
     "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
-    "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
+    "from azureml.train.hyperdrive.parameter_expressions import uniform, choice\n",
     "import os #> es wird in Bild 4 erwähnt\n",
     "\n",
     "# Specify parameter sampler\n",
     "#ps = ### YOUR CODE HERE ### -> uniform. 'Tune hyperparmaters for your model with Azure ML'\n",
     "ps = RandomParameterSampling( {\n",
-    "        \"--C\": uniform(0.001, 100),\n",
-    "        \"--max_iter\": uniform(50, 300)\n",
+    "        \"--C\": uniform(0.1, 1.0),\n",
+    "        \"--max_iter\": choice([50, 100, 200])\n",
     "    }\n",
     ")\n",
     "\n",
@@ -125,7 +126,7 @@
     "                                     primary_metric_name='Accuracy', \n",
     "                                     primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
     "                                     max_total_runs=20,\n",
-    "                                     max_concurrent_runs=4) #similar to the number of nodes"
+    "                                     max_concurrent_runs=3) #similar to the number of nodes"
    ]
   },
   {
@@ -169,9 +170,9 @@
     "\n",
     "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
     "\n",
-    "print(best_run.get_file_names())\n",
-    "hyperdrive_model = best_run.register_model(model_name = 'SKlearn_hyperdrive', model_path = 'outputs/model.joblib')\n",
-    "print(best_run)\n",
+    "#print(best_run.get_file_names())\n",
+    "#hyperdrive_model = best_run.register_model(model_name = 'SKlearn_hyperdrive', model_path = 'outputs/model.joblib')\n",
+    "#print(best_run)\n",
     "\n",
     "joblib.dump(best_run, 'outputs/SKlearn_hyperdrive_joblib.joblib')\n",
     "\n",
@@ -217,7 +218,7 @@
     "from train import clean_data\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "#from sklearn.preprocessing import OneHotEncoder\n",
     "import pandas as pd\n",
     "from azureml.core.run import Run\n",
     "\n",
@@ -227,7 +228,43 @@
     "#or maybe without the to_pandas_dataframe()\n",
     "ds = x.join(y)\n",
     "#todo: Split data into train and test set\n",
-    "x_train, x_test = train_test_split(ds, test_size=0.3)"
+    "x_train_df, x_test_df = train_test_split(ds, test_size=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert Dataframe to TabularDataset\n",
+    "\n",
+    "# azureml-core of version 1.0.72 or higher is required\n",
+    "# azureml-dataprep[pandas] of version 1.1.34 or higher is required\n",
+    "\n",
+    "from azureml.core import Workspace, Dataset\n",
+    "local_path_train = 'data/prepared_x_train.csv'\n",
+    "local_path_test = 'data/prepared_x_test.csv'\n",
+    "x_train_df.to_csv(local_path_train)\n",
+    "x_test_df.to_csv(local_path_test)\n",
+    "\n",
+    "# upload the local file to a datastore on the cloud\n",
+    "\n",
+    "subscription_id = 'xxxxxxxxxxxxxxxxxxxxx' \n",
+    "resource_group = 'xxxxxx'\n",
+    "workspace_name = 'xxxxxxxxxxxxxxxx'\n",
+    "\n",
+    "workspace = Workspace(subscription_id, resource_group, workspace_name)\n",
+    "\n",
+    "# get the datastore to upload prepared data\n",
+    "datastore = workspace.get_default_datastore()\n",
+    "\n",
+    "# upload the local file from src_dir to the target_path in datastore\n",
+    "datastore.upload(src_dir='data', target_path='data')\n",
+    "\n",
+    "# create a dataset referencing the cloud location\n",
+    "x_train = Dataset.Tabular.from_delimited_files(path = [(datastore, ('data/prepared_x_train.csv'))])\n",
+    "x_test = Dataset.Tabular.from_delimited_files(path = [(datastore, ('data/prepared_x_test.csv'))])"
    ]
   },
   {
